- Fixed menu background color on mobile side menu

--- a/app/src/app/triangular/layouts/default/_default.scss
+++ b/app/src/app/triangular/layouts/default/_default.scss
@@ -19,6 +19,7 @@
 .admin-sidebar-left {
   overflow-x:hidden;
   md-content {
+    height: 100%;
     overflow-x:hidden;
   }
 }
